# Build tables for the tests
SET(CMAKE_CXX_ARCHIVE_CREATE "<CMAKE_AR> <OBJECTS> ${CMAKE_CURRENT_BINARY_DIR}")
SET(CMAKE_C_ARCHIVE_CREATE "<CMAKE_AR> <OBJECTS> ${CMAKE_CURRENT_BINARY_DIR}")
add_library(ut_md_tbl_ram_invalidfile1 STATIC invalidfile1.c)
add_library(ut_md_tbl_ram_invalidfile2 STATIC invalidfile2.c)
add_library(ut_md_tbl_ram_invalidfile3 STATIC invalidfile3.c)
add_library(ut_md_tbl_ram_invalidfile3a STATIC invalidfile3a.c)
add_library(ut_md_tbl_ram_invalidfile4 STATIC invalidfile4.c)
add_library(ut_md_tbl_ram_invalidfile5 STATIC invalidfile5.c)
add_library(ut_md_tbl_ram_invalidfile6 STATIC invalidfile6.c)
add_library(ut_md_tbl_ram_invalidfile7 STATIC invalidfile7.c)
add_library(ut_md_tbl_ram_invalidfile8 STATIC invalidfile8.c)
add_library(ut_md_tbl_ram_validfile1 STATIC validfile1.c)
add_library(ut_md_tbl_ram_validfile2 STATIC validfile2.c)
add_library(ut_md_tbl_ram_validfile3 STATIC validfile3.c)

set_target_properties(ut_md_tbl_ram_invalidfile1 PROPERTIES PREFIX "" SUFFIX ".tbl")
set_target_properties(ut_md_tbl_ram_invalidfile2 PROPERTIES PREFIX "" SUFFIX ".tbl")
set_target_properties(ut_md_tbl_ram_invalidfile3 PROPERTIES PREFIX "" SUFFIX ".tbl")
set_target_properties(ut_md_tbl_ram_invalidfile3a PROPERTIES PREFIX "" SUFFIX ".tbl")
set_target_properties(ut_md_tbl_ram_invalidfile4 PROPERTIES PREFIX "" SUFFIX ".tbl")
set_target_properties(ut_md_tbl_ram_invalidfile5 PROPERTIES PREFIX "" SUFFIX ".tbl")
set_target_properties(ut_md_tbl_ram_invalidfile6 PROPERTIES PREFIX "" SUFFIX ".tbl")
set_target_properties(ut_md_tbl_ram_invalidfile7 PROPERTIES PREFIX "" SUFFIX ".tbl")
set_target_properties(ut_md_tbl_ram_invalidfile8 PROPERTIES PREFIX "" SUFFIX ".tbl")
set_target_properties(ut_md_tbl_ram_validfile1 PROPERTIES PREFIX "" SUFFIX ".tbl")
set_target_properties(ut_md_tbl_ram_validfile2 PROPERTIES PREFIX "" SUFFIX ".tbl")
set_target_properties(ut_md_tbl_ram_validfile3 PROPERTIES PREFIX "" SUFFIX ".tbl")
